style/Fix footer height on IE

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -45,6 +45,7 @@
       display: flex
       align-items: center
       margin-bottom: 1.4rem
+      height: 18px
       text-transform: uppercase
       font-weight: 700
 
